// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> renders correctly with empty props 1`] = `
<button
  className="MuiButtonBase-root-50 MuiButton-root-24 MuiButton-text-26 MuiButton-flat-29 CustomButton-button-1 CustomButton-sm-18 CustomButton-round-19"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-25"
  />
  <span
    className="MuiTouchRipple-root-53"
  />
</button>
`;

exports[`<Button/> renders correctly with props 1`] = `
<button
  aria-label="Checkout"
  className="MuiButtonBase-root-50 MuiButton-root-24 MuiButton-fab-41 MuiButton-contained-35 MuiButton-raised-38 CustomButton-button-1 CustomButton-sm-18 CustomButton-primary-3 CustomButton-round-19"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroudColor": "#f9a825",
    }
  }
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-25"
  >
    Click Here
  </span>
  <span
    className="MuiTouchRipple-root-53"
  />
</button>
`;
